--- a/www/credits.html
+++ b/www/credits.html
@@ -19,9 +19,7 @@
 						<p>
 							<strong>Prossime funzionalità</strong>
 							<ul>
-								<li>Classifica formazione</li>
 								<li>Statistiche</li>
-								<li>Albo D'Oro</li>
 								<li>Impianti</li>
 								<li>Foto</li>
 								<li>Video</li>
@@ -30,6 +28,17 @@
 						<p>Questa app è stata progettata e sviluppata da Paolo Cantoni e Francesco Gentili</p>
 						<p>In caso di problemi scrivere una email a <a href="mailto:informatica@lcfc.it">informatica@lcfc.it</a></p>
 						<div data-role="collapsible-set">
+							<div data-role="collapsible" data-inset="false" data-mini="true">
+								<h3>ver. 1.0.4 del 25/09/2014</h3>
+								<p class="code">
+									- aggiunto albo d'oro<br/>
+									- aggiunta pagina voto top<br/>
+									- aggiunta pagina classifica formazione<br/>
+									- aggiunta pagina tesserato<br/>
+									- aggiunta pagina news<br/>
+									- corretti alcuni bug
+								</p>
+							</div>
 							<div data-role="collapsible" data-inset="false" data-mini="true">
 								<h3>ver. 1.0.3 del 31/01/2014</h3>
 								<p class="code">
