--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="lib/jquery.mobile-1.3.1/graphite.water.css" type="text/css" media="all" />
 		<link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
 		<script type="text/javascript" src="phonegap.js"></script>
-<!--		<script src="http://10.10.10.102:8081/target/target-script-min.js#anonymous"></script> -->
+		<script src="http://10.10.10.102:8081/target/target-script-min.js#anonymous"></script>
 	</head>
 	<body>
 		<div data-role="page" id="index" class="page">
