--- a/www/classifica.html
+++ b/www/classifica.html
@@ -28,6 +28,7 @@
               <span class="landscape"><strong>CF:</strong> coppa formazione;</span>
               <span class="landscape"><strong>A:</strong> accompagnatore ufficiale;</span>
 						</div>
+						<div>Ruotando il telefono sar&agrave; possibile visualizzare pi&ugrave; dettagli</div>
 					</div>
 				</div>
 			</div>
