Prove di fotocamera

--- a/www/comunicato.html
+++ b/www/comunicato.html
@@ -16,6 +16,7 @@
 					<div class="ui-body ui-body-d">
 						<select name="comunicato-anno" id="comunicato-anno">
 							<option value="">Stagione</option>
+							<option value="62">2014/15</option>
 							<option value="61">2013/14</option>
 							<option value="36">2012/13</option>
 							<option value="23">2011/12</option>
