--- a/www/foto.html
+++ b/www/foto.html
@@ -12,8 +12,8 @@
 				<h1>Foto</h1>
 			</header>
 			<div data-role="content" id="foto-content">
-				<a data-role="button" id="foto" href="#">Scatta foto</a>
-				<img id="fotoAnteprima" src=""/>
+				<a data-role="button" id="foto-scatta" href="#">Scatta foto</a>
+				<img id="foto-anteprima" src=""/>
 			</div>
 		</div>
   </body>
