corretto scatto foto

--- a/www/foto.html
+++ b/www/foto.html
@@ -12,7 +12,7 @@
 				<h1>Foto</h1>
 			</header>
 			<div data-role="content" id="foto-content">
-				<a data-role="button" id="foto-scatta" href="#">Scatta foto</a>
+				<a data-role="button" id="foto-scatta">Scatta foto</a>
 				<img id="foto-anteprima" src=""/>
 			</div>
 		</div>
