aggiunte opzioni alla fotocamera

--- a/www/foto.html
+++ b/www/foto.html
@@ -13,7 +13,7 @@
 			</header>
 			<div data-role="content" id="foto-content">
 				<a data-role="button" id="foto-scatta">Scatta foto</a>
-				<img id="foto-anteprima" src=""/>
+				<div id="foto-anteprime"></div>
 			</div>
 		</div>
   </body>
