--- a/www/foto.html
+++ b/www/foto.html
@@ -14,6 +14,7 @@
 			<div data-role="content" id="foto-content">
 				<a data-role="button" id="foto-scatta">Scatta foto</a>
 				<div id="foto-anteprime"></div>
+				<a data-role="button" id="foto-invia">Invia foto</a>
 			</div>
 		</div>
   </body>
