--- a/www/foto.html
+++ b/www/foto.html
@@ -10,11 +10,15 @@
 			<header data-role="header" id="foto-header">
 				<a href="#pannello" data-icon="bars">Menu</a>
 				<h1>Foto</h1>
+				<a href="#" data-role="button" id="foto-invia">Invia foto</a>
 			</header>
 			<div data-role="content" id="foto-content">
-				<a data-role="button" id="foto-scatta">Scatta foto</a>
 				<div id="foto-anteprime"></div>
-				<a data-role="button" id="foto-invia">Invia foto</a>
+			</div>
+			<div data-role="footer" data-position="fixed" class="ui-footer-fixed">
+		    <div data-role="navbar">
+					<ul><li><a data-role="button" id="foto-scatta">Scatta foto</a></li></ul>
+		    </div>
 			</div>
 		</div>
   </body>
