--- a/www/credits.html
+++ b/www/credits.html
@@ -29,6 +29,13 @@
 						<p>In caso di problemi scrivere una email a <a href="mailto:informatica@lcfc.it">informatica@lcfc.it</a></p>
 						<div data-role="collapsible-set">
 							<div data-role="collapsible" data-inset="false" data-mini="true">
+								<h3>ver. 1.0.5 del 20/10/2014</h3>
+								<p class="code">
+									- aggiunto stagione '14/15 per comunicato<br/>
+									- migliorate le statistiche<br/>
+								</p>
+							</div>
+							<div data-role="collapsible" data-inset="false" data-mini="true">
 								<h3>ver. 1.0.4 del 25/09/2014</h3>
 								<p class="code">
 									- aggiunto albo d'oro<br/>
