corretto selezione foto

--- a/www/foto.html
+++ b/www/foto.html
@@ -13,7 +13,9 @@
 				<a href="#" data-role="button" id="foto-invia">Invia foto</a>
 			</header>
 			<div data-role="content" id="foto-content">
-				<div id="foto-anteprime"></div>
+				<div id="foto-anteprime">
+					<p class='no-foto none'>Nessuna foto ancora scattata<br/>Scatta una foto e inviala alla LCFC</p>
+				</div>
 			</div>
 			<div data-role="footer" data-position="fixed" class="ui-footer-fixed">
 		    <div data-role="navbar">
