--- a/www/foto.html
+++ b/www/foto.html
@@ -14,7 +14,9 @@
 			</header>
 			<div data-role="content" id="foto-content">
 				<div id="foto-anteprime">
-					<p class='no-foto none'>Nessuna foto ancora scattata<br/>Scatta una foto e inviala alla LCFC</p>
+					<p class="no-foto none">Nessuna foto ancora scattata<br/>Scatta una foto e inviala alla LCFC</p>
+					<img src="images/lcfc_logo_app.png" class="left image-selected"/>
+					<img src="images/lcfc_logo_app.png" class="left image-selected"/>
 				</div>
 			</div>
 			<div data-role="footer" data-position="fixed" class="ui-footer-fixed">
