--- a/www/foto.html
+++ b/www/foto.html
@@ -13,10 +13,10 @@
 				<a href="#" data-role="button" id="foto-invia">Invia foto</a>
 			</header>
 			<div data-role="content" id="foto-content">
-				<div id="foto-anteprime">
+				<div id="foto-anteprime" class="a-center">
 					<p class="no-foto none">Nessuna foto ancora scattata<br/>Scatta una foto e inviala alla LCFC</p>
-					<img src="images/lcfc_logo_app.png" class="left image-selected"/>
-					<img src="images/lcfc_logo_app.png" class="left image-selected"/>
+					<div class="left image-selected"><span></span><img src="images/sezione_7.png"/></div>
+					<div class="left"><span></span><img src="images/sezione_7.png"/></div>
 				</div>
 			</div>
 			<div data-role="footer" data-position="fixed" class="ui-footer-fixed">
