--- a/www/foto.html
+++ b/www/foto.html
@@ -15,6 +15,8 @@
 			<div data-role="content" id="foto-content">
 				<div id="foto-anteprime" class="a-center">
 					<p class="no-foto none">Nessuna foto ancora scattata<br/>Scatta una foto e inviala alla LCFC</p>
+					<div class="left image-selected"><span></span><img src="images/sezione_7.png"/></div>
+					<div class="left"><span></span><img src="images/sezione_7.png"/></div>
 				</div>
 			</div>
 			<div data-role="footer" data-position="fixed" class="ui-footer-fixed">
