ripristino menu foto

--- a/www/menu.html
+++ b/www/menu.html
@@ -10,7 +10,7 @@
 		<li data-icon="referti"><a href="referti.html">Referti</a></li>
 		<li data-icon="squadre"><a href="squadre.html">Squadre</a></li>
 		<li data-icon="comunicato"><a href="comunicato.html">Comunicato</a></li>
-<!--		<li data-icon="foto"><a href="foto.html">Foto</a></li> -->
+		<li data-icon="foto"><a href="foto.html">Foto</a></li>
 		<li data-icon="news"><a href="news.html">News</a></li>
 		<li data-icon="normativa"><a href="normativa.html">Normativa</a></li>
 		<li data-icon="preferiti"><a href="normativa-preferiti.html">Preferiti</a></li>
