aggiunto caricamento da galleria

--- a/www/foto.html
+++ b/www/foto.html
@@ -16,11 +16,9 @@
 				<div id="foto-anteprime" class="a-center">
 					<p class="no-foto none">Nessuna foto ancora scattata<br/>Scatta una foto e inviala alla LCFC</p>
 				</div>
-			</div>
-			<div data-role="footer" data-position="fixed" class="ui-footer-fixed">
-		    <div data-role="navbar">
-					<ul><li><a data-role="button" id="foto-scatta">Scatta foto</a></li></ul>
-		    </div>
+
+				<a data-role="button" id="foto-scatta">Scatta foto</a>
+				<a data-role="button" id="scegli-galleria">Scegli da galleria</a>
 			</div>
 		</div>
   </body>
