--- a/www/foto.html
+++ b/www/foto.html
@@ -14,7 +14,7 @@
 			</header>
 			<div data-role="content" id="foto-content">
 				<div id="foto-anteprime" class="a-center">
-					<p class="no-foto none">Nessuna foto ancora scattata<br/>Scatta una foto e inviala alla LCFC</p>
+					<p class="no-foto">Nessuna foto ancora scattata<br/>Scatta una foto e inviala alla LCFC</p>
 				</div>
 
 				<a data-role="button" id="foto-scatta">Scatta foto</a>
