--- a/www/foto.html
+++ b/www/foto.html
@@ -16,7 +16,7 @@
 				<div id="foto-anteprime" class="a-center">
 					<p class="no-foto">Nessuna foto ancora scattata<br/>Scatta una foto e inviala alla LCFC</p>
 				</div>
-
+				<div class="clear"></div>
 				<a data-role="button" id="foto-scatta">Scatta foto</a>
 				<a data-role="button" id="scegli-galleria">Scegli da galleria</a>
 			</div>
