--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
 					<div class="home-prossimo-incontro home-info none"></div>
 					<div class="home-ultimo-incontro home-info none"></div>
 					<div class="home-no-squadra none"></div>
+					<div id="platform"></div>
 				</div>
 			</div>
 		</div>
