--- a/www/foto.html
+++ b/www/foto.html
@@ -13,6 +13,7 @@
 				<a href="#" data-role="button" id="foto-invia">Invia foto</a>
 			</header>
 			<div data-role="content" id="foto-content">
+				<div id="foto-invio-esito"></div>
 				<div id="foto-anteprime" class="a-center">
 					<p class="no-foto">Nessuna foto ancora scattata<br/>Scatta una foto e inviala alla LCFC</p>
 				</div>
