--- a/www/foto.html
+++ b/www/foto.html
@@ -18,6 +18,8 @@
 					<p class="no-foto">Nessuna foto ancora scattata<br/>Scatta una foto e inviala alla LCFC</p>
 				</div>
 				<div class="clear"></div>
+				<input type="text" id="foto-titolo" name="titolo" placeholder="titolo">
+				<textarea id="foto-descrizione" name="descrizione" placeholder="descrizione"></textarea>
 				<a data-role="button" id="foto-scatta">Scatta foto</a>
 				<a data-role="button" id="scegli-galleria">Scegli da galleria</a>
 			</div>
