--- a/www/foto.html
+++ b/www/foto.html
@@ -21,7 +21,7 @@
 								<p class="no-foto">Nessuna foto ancora scattata<br/>Scatta una foto e inviala alla LCFC</p>
 							</div>
 							<div class="clear"></div>
-							<form class="none">
+							<form id="foto-form" class="none">
 								<input type="text" id="foto-titolo" name="titolo" placeholder="titolo">
 								<textarea id="foto-descrizione" name="descrizione" placeholder="descrizione"></textarea>
 							</form>
