--- a/www/credits.html
+++ b/www/credits.html
@@ -19,10 +19,10 @@
 						<p>
 							<strong>Prossime funzionalità</strong>
 							<ul>
-								<li>Statistiche</li>
 								<li>Impianti</li>
 								<li>Foto</li>
 								<li>Video</li>
+								<li>Notifiche push</li>
 							</ul>
 						</p>
 						<p>Questa app è stata progettata e sviluppata da Paolo Cantoni e Francesco Gentili</p>
