--- a/www/menu.html
+++ b/www/menu.html
@@ -1,22 +1,22 @@
 <div data-role="panel" data-position="left" data-position-fixed="true" data-display="reveal" data-theme="d" id="pannello">
 	<ul data-role='listview' data-theme="c">
-		<li data-icon="index"><a id="menu-index" class="go-home">Home</a></li>
-		<li data-icon="classifica"><a href="classifica.html">Classifica</a></li>
-		<li data-icon="risultati"><a href="risultati.html">Risultati</a></li>
-		<li data-icon="marcatori"><a href="classifica-marcatori.html">Classifica marcatori</a></li>
-		<li data-icon="calendario"><a href="calendario.html">Calendario</a></li>
-		<li data-icon="formazione"><a href="classifica-formazione.html">Classifica formazione</a></li>
-		<li data-icon="arbitro-giudizio"><a href="arbitro-giudizio.html">Classifica arbitro</a></li>
-		<li data-icon="referti"><a href="referti.html">Referti</a></li>
-		<li data-icon="squadre"><a href="squadre.html">Squadre</a></li>
-		<li data-icon="comunicato"><a href="comunicato.html">Comunicato</a></li>
-		<li data-icon="foto"><a href="foto.html">Foto</a></li>
-		<li data-icon="news"><a href="news.html">News</a></li>
-		<li data-icon="normativa"><a href="normativa.html">Normativa</a></li>
-		<li data-icon="preferiti"><a href="normativa-preferiti.html">Preferiti</a></li>
-		<li data-icon="albo-oro"><a href="albo-oro.html">Albo d'oro</a></li>
-		<li data-icon="contacts"><a href="numeri-utili.html">Numeri utili</a></li>
-		<li data-icon="settings"><a href="settings.html">Opzioni</a></li>
-		<li data-icon="credits"><a href="credits.html">Info</a></li>
+		<li class="menu-home" data-icon="index"><a id="menu-index" class="go-home">Home</a></li>
+		<li class="menu-classifica"  data-icon="classifica"><a href="classifica.html">Classifica</a></li>
+		<li class="menu-risultati"  data-icon="risultati"><a href="risultati.html">Risultati</a></li>
+		<li class="menu-classsifica-marcatori"  data-icon="marcatori"><a href="classifica-marcatori.html">Classifica marcatori</a></li>
+		<li class="menu-calendario"  data-icon="calendario"><a href="calendario.html">Calendario</a></li>
+		<li class="menu-classifica-formazione"  data-icon="formazione"><a href="classifica-formazione.html">Classifica formazione</a></li>
+		<li class="menu-classifica-arbitro"  data-icon="arbitro-giudizio"><a href="arbitro-giudizio.html">Classifica arbitro</a></li>
+		<li class="menu-referti"  data-icon="referti"><a href="referti.html">Referti</a></li>
+		<li class="menu-squadre"  data-icon="squadre"><a href="squadre.html">Squadre</a></li>
+		<li class="menu-comunicato"  data-icon="comunicato"><a href="comunicato.html">Comunicato</a></li>
+		<li class="menu-foto"  data-icon="foto"><a href="foto.html">Foto</a></li>
+		<li class="menu-news"  data-icon="news"><a href="news.html">News</a></li>
+		<li class="menu-normativa"  data-icon="normativa"><a href="normativa.html">Normativa</a></li>
+		<li class="menu-normativa-preferiti"  data-icon="preferiti"><a href="normativa-preferiti.html">Preferiti</a></li>
+		<li class="menu-albo-oro"  data-icon="albo-oro"><a href="albo-oro.html">Albo d'oro</a></li>
+		<li class="menu-numeri-utili"  data-icon="contacts"><a href="numeri-utili.html">Numeri utili</a></li>
+		<li class="menu-settings"  data-icon="settings"><a href="settings.html">Opzioni</a></li>
+		<li class="menu-credits"  data-icon="credits"><a href="credits.html">Info</a></li>
 	</ul>
 </div>
