--- a/www/foto.html
+++ b/www/foto.html
@@ -17,6 +17,7 @@
 					<div class="ui-block-a">
 						<div class="ui-body ui-body-d">
 							<div id="foto-invio-esito"></div>
+							<div id="foto-invio-errore"></div>
 							<div id="foto-anteprime" class="a-center">
 								<p class="no-foto">Nessuna foto ancora scattata<br/>Scatta una foto e inviala alla LCFC</p>
 							</div>
