tolta immagine in home e altro

--- a/www/index.html
+++ b/www/index.html
@@ -12,12 +12,12 @@
 		<div data-role="page" id="index" class="page">
 			<header data-role="header">
 				<a href="#pannello" data-icon="bars">Menu</a>
-				<h1>LCFC</h1>
+				<h1><img src='images/lcfc_logo_app.png' height='20px' /> LCFC</h1>
 				<a href="settings.html" data-icon="gear">Opzioni</a>
 			</header>
 			<div data-role="content" id="index-content" class="relative">
 				<div id="scroll">
-					<div class='logo-home a-center'><img src='images/lcfc_logo_app.png' height='80px' /></div>
+					<div class='logo-home a-center'></div>
 					<div class="home-info-squadra home-info none"></div>
 					<div class="home-prossimo-incontro home-info none"></div>
 					<div class="home-ultimo-incontro home-info none"></div>
