--- a/www/menu.html
+++ b/www/menu.html
@@ -10,7 +10,7 @@
 		<li class="menu-referti" data-icon="referti"><a href="referti.html">Referti</a></li>
 		<li class="menu-squadre" data-icon="squadre"><a href="squadre.html">Squadre</a></li>
 		<li class="menu-comunicato" data-icon="comunicato"><a href="comunicato.html">Comunicato</a></li>
-		<li class="menu-foto" data-icon="foto"><a href="foto.html">Foto</a></li>
+<!--		<li class="menu-foto" data-icon="foto"><a href="foto.html">Foto</a></li>-->
 		<li class="menu-news" data-icon="news"><a href="news.html">News</a></li>
 		<li class="menu-normativa" data-icon="normativa"><a href="normativa.html">Normativa</a></li>
 		<li class="menu-normativa-preferiti" data-icon="preferiti"><a href="normativa-preferiti.html">Preferiti</a></li>
