voti arbitro e top migliorati

--- a/www/home.html
+++ b/www/home.html
@@ -10,7 +10,7 @@
 			<header data-role="header">
 				<a href="#pannello" data-icon="bars">Menu</a>
 				<h1><img src='images/lcfc_logo_app.png' height='20px' /> LCFC</h1>
-				<a href="settings.html" data-icon="gear">Opzioni</a>
+				<a href="settings.html" data-icon="gear">Impostazioni</a>
 			</header>
 			<div data-role="content" id="home-content" class="relative">
 				<div id="scroll">
