--- a/www/settings.html
+++ b/www/settings.html
@@ -24,7 +24,7 @@
 							<ul data-role="listview" data-inset="true" data-filter="true" data-filter-placeholder="Cerca squadra..." id="settings-autocomplete"></ul>
 							<br/>
 				    	<a class='go-home' data-role='button'>Torna alla pagina iniziale</a>
-				    	<a data-role='button' id='show-login'>Logout</a>
+				    	<a data-role='button' id='show-login' class='none'>Logout</a>
 							<a data-role="button" id="settings-reset-preferiti">Cancella preferiti</a>
 						</div>
 					</div>
